test/syc/bad/initinvarr.c
/*
 * Invalid initializer
 *
 * Trying to initialize an array with a scalar initializer.
 */

int a[1] = 1;
